--- a/notebooks/SteamDB fix LastDepotUpdate.ipynb
+++ b/notebooks/SteamDB fix LastDepotUpdate.ipynb
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "28283"
+       "28871"
       ]
      },
      "execution_count": 3,
@@ -65,6 +65,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
+    "from datetime import datetime\n",
     "for appid, timestamp in last_updated_data.items():\n",
     "    c.execute('''\n",
     "        UPDATE `apps` SET `LastDepotUpdate` = %s WHERE `AppID` = %s\n",
