--- a/notebooks/PCGW export games.ipynb
+++ b/notebooks/PCGW export games.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,18 +55,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36385"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Make unique\n",
     "all_pages = list(set(all_pages))\n",
-    "all_pages.sort() # for predictability"
+    "all_pages.sort() # for predictability\n",
+    "len(all_pages)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data_pcgw/list_category_games.txt', 'w', encoding='utf-8') as f:\n",
+    "    for item in all_pages:\n",
+    "        f.write(\"%s\\n\" % item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,11 +104,13 @@
     "    os.makedirs(export_dir)\n",
     "    \n",
     "# Remove old exported files\n",
-    "import glob\n",
-    "for file in glob.glob(os.path.join(export_dir, '*')):\n",
-    "    os.remove(file)\n",
+    "#import glob\n",
+    "#for file in glob.glob(os.path.join(export_dir, '*')):\n",
+    "#    os.remove(file)\n",
     "\n",
     "for i in range(batches):\n",
+    "    if i is 1:\n",
+    "        continue\n",
     "    pages = all_pages[i * 5000 : i * 5000 + 5000]\n",
     "    pages_crnl = '\\r\\n'.join(pages)\n",
     "\n",
