--- a/notebooks/PCGW export templates.ipynb
+++ b/notebooks/PCGW export templates.ipynb
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get the first list of pages\n",
     "import requests\n",
     "# Note: only *that* namespace\n",
-    "r = requests.get('https://pcgamingwiki.com/wiki/Special:AllPages', headers=headers)\n",
+    "r = requests.get('https://pcgamingwiki.com/wiki/Special:AllPages?from=&to=&namespace=10', headers=headers)\n",
     "done_processing = False\n",
     "all_pages = []\n",
     "\n",
@@ -56,16 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "34782"
+       "302"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,18 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "pickle.dump(all_pages, open('../data_pcgw/all_pages_main.p', 'wb'))\n",
-    "#all_pages =pickle.load(open('../data_pcgw/all_pages_main.p', 'rb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,14 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34782\n"
+      "302\n"
      ]
     }
    ],
@@ -136,55 +127,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "356/696\r"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "No active exception to reraise",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-39-7ec33f365e25>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[0mr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpost\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'https://pcgamingwiki.com/w/api.php'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mheaders\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstatus_code\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m200\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m         \u001b[1;32mraise\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'{i + 1}/{batches}'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'\\r'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: No active exception to reraise"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# for every 50, purge it\n",
+    "# Export in batches of 5000\n",
     "import math\n",
-    "batch_size = 50\n",
-    "batches = math.ceil(len(all_pages) / batch_size)\n",
-    "\n",
+    "batches = math.ceil(len(all_pages) / 5000)\n",
+    "url = 'https://pcgamingwiki.com/wiki/Special:Export'\n",
     "export_dir = '../data_pcgw'\n",
     "\n",
     "import os\n",
     "if not os.path.exists(export_dir):\n",
     "    os.makedirs(export_dir)\n",
+    "    \n",
+    "# Remove old exported files\n",
+    "#import glob\n",
+    "#for file in glob.glob(os.path.join(export_dir, '*')):\n",
+    "#    os.remove(file)\n",
     "\n",
-    "import json\n",
     "for i in range(batches):\n",
-    "    if i < 356:\n",
-    "        continue\n",
-    "    pages = all_pages[i * batch_size : i * batch_size + batch_size]\n",
-    "    pages_comb = '|'.join(pages)\n",
+    "    pages = all_pages[i * 5000 : i * 5000 + 5000]\n",
+    "    pages_crnl = '\\r\\n'.join(pages)\n",
+    "\n",
     "    data = {\n",
-    "        'action': 'purge',\n",
-    "        'titles': pages_comb,\n",
-    "        'format': 'json',\n",
+    "        'catname': '',\n",
+    "        'pages': pages_crnl,\n",
+    "        'curonly': '1',\n",
+    "        'wpDownload': '1',\n",
+    "        'wpEditToken': '+\\\\',\n",
+    "        'title': 'Special:Export',\n",
     "    }\n",
-    "    r = requests.post('https://pcgamingwiki.com/w/api.php', headers=headers, data=data)\n",
-    "    if r.status_code != 200:\n",
-    "        raise\n",
-    "    print(f'{i + 1}/{batches}', end='\\r')"
+    "\n",
+    "    r = requests.post(url, data=data, headers=headers, stream=True)\n",
+    "    filename = 'pcgw_templates_%d.xml' % (i + 1)\n",
+    "\n",
+    "    with open(os.path.join(export_dir, filename), 'wb') as f:\n",
+    "        for chunk in r.iter_content(chunk_size=1024):\n",
+    "            if chunk:\n",
+    "                f.write(chunk)"
    ]
   }
  ],
